# CS205_Project4

./: .gitignore  CMakeLists.txt  mat  try.c
include/: function.h
src/: a.out  function.c  main.c
